Add react-hook-form and link the form with redux

--- a/renderer/styles/globals.css
+++ b/renderer/styles/globals.css
@@ -10,6 +10,10 @@
 
 @layer components {
   .btn-blue {
-    @apply text-white font-bold px-4 py-2 rounded bg-blue-600 hover:bg-blue-500;
+    @apply text-white font-bold px-4 py-2 rounded bg-blue-600 hover:bg-blue-500 cursor-pointer;
+  }
+
+  .form-input {
+    @apply text-gray-800;
   }
 }
